[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/MainMenu/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Menu/MenuSkirmish/MenuSkirmishNewGame/MenuSkirmishNewGame.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/3DBackground/3DBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/MenuOptions/MenuOptions.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/MenuBenchmark/MenuBenchmark.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/MenuCampaign/MenuCampaign.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menu/MenuCampaign/MenuCampaignNew/MenuCampaignNew.tscn" type="PackedScene" id=8]
[ext_resource path="res://Menu/MenuCampaign/MenuCampaignLoad/MenuCampaignLoad.tscn" type="PackedScene" id=9]

[node name="MenuCommon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3DBackground" parent="." instance=ExtResource( 4 )]
visible = false

[node name="MainMenu" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MenuSkirmishNewGame" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MenuOptions" parent="." instance=ExtResource( 5 )]
visible = false

[node name="MenuBenchmark" parent="." instance=ExtResource( 6 )]
visible = false

[node name="MenuCampaign" parent="." instance=ExtResource( 7 )]
visible = false

[node name="MenuCampaignNew" parent="." instance=ExtResource( 8 )]

[node name="MenuCampaignLoad" parent="." instance=ExtResource( 9 )]
visible = false
[connection signal="campaign_menu_show" from="MainMenu/Buttons/Campaign" to="." method="_campaign_menu_show"]
[connection signal="skirmish_menu_show" from="MainMenu/Buttons/Single Game" to="." method="_skirmish_menu_show"]
[connection signal="options_menu_show" from="MainMenu/Buttons/Options" to="." method="_options_menu_show"]
[connection signal="benchmark_menu_show" from="MainMenu/Buttons/Benchmark" to="." method="_benchmark_menu_show"]
[connection signal="exit_game" from="MainMenu/Buttons/Exit Game" to="." method="_exit_game"]
[connection signal="back_to_menu" from="MenuSkirmishNewGame/Buttons/BackToMenu" to="." method="_back_to_menu"]
[connection signal="back_to_menu" from="MenuOptions/Buttons/BackToMenu" to="." method="_back_to_menu"]
[connection signal="back_to_menu" from="MenuBenchmark/Buttons/BackToMenu" to="." method="_back_to_menu"]
[connection signal="back_to_menu" from="MenuCampaign/Buttons/BackToMenu" to="." method="_back_to_menu"]
[connection signal="back_to_menu_campaign" from="MenuCampaignNew/Buttons/Back" to="." method="_campaign_menu_show"]
[connection signal="back_to_menu_campaign" from="MenuCampaignLoad/Buttons/Back" to="." method="_campaign_menu_show"]

[editable path="MainMenu"]

[editable path="MenuSkirmishNewGame"]

[editable path="MenuOptions"]

[editable path="MenuBenchmark"]

[editable path="MenuCampaign"]

[editable path="MenuCampaignNew"]

[editable path="MenuCampaignLoad"]
